@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# $NetBSD: etcupdate,v 1.21 2003/11/12 13:31:07 grant Exp $
+# $NetBSD: etcupdate,v 1.22 2005/04/17 23:12:40 lukem Exp $
 #
 # Copyright (c) 2001 The NetBSD Foundation, Inc.
 # All rights reserved.
@@ -531,9 +531,9 @@ if [ ! -z "${NEED_PWD_MKDB}" ]; then
 		echo ""
 	fi
 fi
-if [ -x /etc/postinstall -a -z "${BINARY}" ]; then
+if [ -x /usr/sbin/postinstall -a -z "${BINARY}" ]; then
 	S=`echo ${SRCDIR} | sed 's+/etc++'`
-	echo "*** Running /etc/postinstall"
-	/etc/postinstall -s "${S}" check
+	echo "*** Running /usr/sbin/postinstall"
+	/usr/sbin/postinstall -s "${S}" check
 fi
 echo "*** All done"
